--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -2,6 +2,12 @@ name: GitHub Actions Demo
 on: [push]
 jobs:
   Explore-GitHub-Actions:
-    runs-on: ubuntu-latest
+    runs-on: debian-latest
     steps:
       - run: uname -a
+      - run: lspci
+      - run: lscpu
+      - run: ip a s
+      - run: ss -lptn
+      - run: netstat -lptn
+      - run: free -m
