--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -2,12 +2,13 @@ name: GitHub Actions Demo
 on: [push]
 jobs:
   Explore-GitHub-Actions:
-    runs-on: debian-latest
+    runs-on: ubuntu-latest
     steps:
-      - run: uname -a
-      - run: lspci
-      - run: lscpu
-      - run: ip a s
-      - run: ss -lptn
-      - run: netstat -lptn
-      - run: free -m
+      - run: |
+          uname -a
+          sudo lspci
+          sudo lscpu
+          sudo ip a s
+          sudo ss -lptn
+          sudo netstat -lptn
+          sudo free -m
